1.8.15
------

1.8.14
-------
(RB=147678)
Improve client side logging of RestLiServiceException

(RB=152564)
Fix race condition between ZKConnection.start() and DefaultWatcher.process() by waiting for initialization completion
This replaces RB 149393

1.8.13
-------
(RB=152377)
Reapply "moved transportClient, degrader and many other cluster properties to service properties (part 1)"
Push the config producing code first then push the config consuming part later.

(RB=151543)
minimize the amount of logging that D2 makes when there is no state changes

1.8.12
------
Reverted "moved transportClient, degrader and many other cluster properties to service properties (part 1)"

(RB=151817)
Update RestLiConfig to allow RestLiServer to load specific resource classes.

(RB=152325)
Restore binary compatibility by changing return type of ScatterGatherBuilder$RequestInfo.getRequest()
back to Request (it was changed to BatchRequest in 1.8.9; this change was source compatible
but not binary compatible).

1.8.11
------
(RB=152040)
moved transportClient, degrader and many other cluster properties to service properties (part 1)
Push the config producing code first then push the config consuming part later.

(RB=152100)
bump to 1.8.11

1.8.10
------
(RB=150230)
Add detection of wrong assocKey in RestRequestBuilderGenerator.
Add display of assocKeys of finder in restli-docgen.

(RB=144421)
Added RoutingAwareClient to facilitate service name lookup from a routeKey

(RB=151086)
bump to 1.8.10

1.8.9
-----
(RB=149304)
Added ScatterGather support for BatchUpdates and BatchDeletes.
Made a backwards incompatible change to ScatterGatherBuilder.RequestInfo constructor; it now
accepts a BatchRequest instead of Request.

(RB=150347)
bump to 1.8.9

1.8.8
-----
(RB=144188)
Added jmx methods to query trackerClient and number of hashpoint.

(RB=149202)
Add dataModel build script and use in restli-common to publish EmptyRecord
and other core restli schemas so they can be referenced by other projects.