@@ -3,5 +3,6 @@
     <li><a href="$docBaseUri">Home</a></li>
     <li><a href="$docBaseUri/rest">Resources</a></li>
     <li><a href="$docBaseUri/data">Data Models</a></li>
+    #if($jsonFormatUri)<li><a href="$jsonFormatUri">View in JSON format</a></li>#end
   </ul>
 </div>
